--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -1,70 +1,60 @@
-.header-top{
+.header-img {
+    width: 30%;
+    padding: 5px 5px 0px 0px;
+    border-right: 1px solid rgb(199, 199, 199);
     display: flex;
-    justify-content: space-around;
     align-items: center;
 }
 
-.header-top-logo{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-}
-
-.logo-img{
-    width: 80%;
-}
-
-.header-top-banner{
-    display: flex;
-    justify-content: center;
-    width: 50%;
-}
-
-.banner-img{
+.header-img img {
     width: 100%;
 }
 
 .header-navBar{
+    width: 70%;
     display: flex;
-    margin-top: 20px;
-    justify-content: space-around;
+    align-items: center;
+    font-size: 1.5em;
 }
+
+.header-navBar a{
+    text-decoration: none;
+    color: #6d6d6d;
+    margin: 5px;
+    padding-bottom: 2px;
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
+}
+
+.header-navBar, a:hover, a:focus {
+    background-size: 100% 2px;
+}
+
 
 @media (min-width: 768px){
-    .logo-img{
-        width: 40%;
+    .header-img {
+        width: 15%;
     }
     
-    .banner-img{
-        width: 40%;
+    .header-img img {
+        width: 100%;
     }
 
     .header-navBar{
-        margin-top: 30px;
-    }
-}
-
-@media (min-width: 1024px){    
-    .logo-img{
-        width: 40%;
-    }
-    
-    .banner-img{
-        width: 40%;
+        width: 85%;
+        font-size: 1.8em;
     }
 
+    .header-navBar a{
+        margin: 10px;
+    }
+  }
+
+  @media (min-width: 1000px){
     .header-navBar{
-        margin-top: 30px;
+        font-size: 2em;
     }
-}
-
-@media (min-width: 1440px){    
-    .logo-img{
-        width: 30%;
-    }
-    
-    .banner-img{
-        width: 30%;
-    }
-
-}
+  }
