--- a/src/components/itemDetailContainer/itemDetail/ItemDetail.css
+++ b/src/components/itemDetailContainer/itemDetail/ItemDetail.css
@@ -1,58 +1,73 @@
-.item{
-    width: 70%;
+.itemDetail{
+    width: 80%;
     text-decoration: none;
     color: black;
     display: flex;
+    flex-direction: column;
+    align-items:center;
     background-color: white;
-    margin: 10px;
-    padding: 5px;
+    margin: auto;
+    margin-top: 15px;
+    padding: 10px;
     -webkit-box-shadow: 0px 0px 2px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 2px -1px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 2px -1px rgba(0,0,0,0.75);
-    align-items:center;
+    
+
 }
 
-.item:hover{
+.itemDetail:hover{
     -webkit-box-shadow: 0px 0px 4px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 4px -1px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 4px -1px rgba(0,0,0,0.75);
 }
 
-.item-img{
-    width: 40%;
-}
-
-.item-img img{
+.itemDetail-img{
     width: 100%;
 }
 
-.item-data{
+.itemDetail-img img{
+    width: 100%;
+}
+
+.itemDetail-data{
     width: 60%;
 }
 
-.item-title{
+.itemDetail-title{
     color: #7D6B7D;
     font-size: 2em;
     letter-spacing: 5px;
 }
 
-.item-stock{
+.itemDetail-stock{
     font-size: 1em;
 }
 
-.item-detail{
+.itemDetail-detail{
     font-size: 1.5em;
 }
 
-.item-price{
+.itemDetail-price{
     font-size: 1.5em;
     color: #db6563;
 }
 
 
+@media (min-width: 768px){
+    .itemDetail-img{
+        width: 80%;
+    }
+}
+
 @media (min-width: 1024px){
-    .item{
-        width: 40%;
-        margin: 20px;
+    .itemDetail{
+        flex-direction: row;
+    }
+}
+
+@media (min-width: 1400px){
+    .itemDetail-img{
+        width: 50%;
     }
 }
