--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,10 @@
   align-items: center;
   background-color: #f6f6f6;
 }
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
