--- a/src/components/itemListContainer/itemList/Item-list.css
+++ b/src/components/itemListContainer/itemList/Item-list.css
@@ -6,7 +6,8 @@
 
 .item-list-title{
     font-size: 2em;
-    color: #6d6d6d;
+    color: #17a2b8;
+    font-weight:900;
     letter-spacing: 5px;
     text-align: center;
 }
