--- a/src/components/itemListContainer/itemList/item/Item.css
+++ b/src/components/itemListContainer/itemList/item/Item.css
@@ -32,7 +32,8 @@
 }
 
 .item-title{
-    color: #7D6B7D;
+    color: #17a2b8;
+    font-weight:900;
     font-size: 2em;
     letter-spacing: 5px;
 }
@@ -48,7 +49,7 @@
 
 .item-price{
     font-size: 1.5em;
-    color: #db6563;
+    color: #17a2b8;
 }
 
 
