--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -1,3 +1,11 @@
+.cart{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
 .cart-button{
     text-align: center;
 }
@@ -10,8 +18,8 @@
 }
 
 .cart-empty{
-    margin-top: 50px;
     font-size: 1.5em;
     text-align: center;
+    margin: 50px 20px 10px 20px;
 }
 
