--- a/src/components/itemDetailContainer/itemDetail/ItemDetail.css
+++ b/src/components/itemDetailContainer/itemDetail/ItemDetail.css
@@ -1,4 +1,4 @@
-.itemDetail{
+#cardDetail{
     width: 80%;
     text-decoration: none;
     color: black;
@@ -12,64 +12,45 @@
     -webkit-box-shadow: 0px 0px 2px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 2px -1px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 2px -1px rgba(0,0,0,0.75);
-    
-
 }
 
-.itemDetail:hover{
-    -webkit-box-shadow: 0px 0px 4px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 4px -1px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 4px -1px rgba(0,0,0,0.75);
-}
-
-.itemDetail-img{
-    width: 100%;
-}
-
-.itemDetail-img img{
-    width: 100%;
-}
-
-.itemDetail-data{
-    width: 60%;
-}
-
-.itemDetail-title{
+#cardDetail-title{
     color: #17a2b8;
     font-size: 2em;
     font-weight:900;
     letter-spacing: 5px;
 }
 
-.itemDetail-stock{
-    font-size: 1em;
-}
-
-.itemDetail-detail{
-    font-size: 1.5em;
-}
-
-.itemDetail-price{
+#cardDetail-price{
     font-size: 1.5em;
     font-weight:900;
     color: #17a2b8;
+    margin-top: 5px;
+}
+
+#cardDetail-detail{
+    font-size: 1.5em;
+}
+
+.cardDetail-count{
+    text-align: center;
 }
 
 
 @media (min-width: 768px){
-    .itemDetail-img{
-        width: 80%;
+    #cardDetail{
+        width: 50%;
     }
 }
 
 @media (min-width: 1024px){
-    .itemDetail{
-        flex-direction: row;
+    #cardDetail{
+        width: 45%;
     }
 }
 
 @media (min-width: 1400px){
-    .itemDetail-img{
-        width: 50%;
+    #cardDetail{
+        width: 35%;
     }
 }
