--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -8,6 +8,12 @@
 
 .cart-button{
     text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.cart-button button{
+    margin: 5%;
 }
 
 .cart-nav{
